cargo-features = ["profile-rustflags"]

[package]
name = "snow"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = {version = "0.29.0", features = ["fs", "mount", "sched", "process"]}
sys-mount = "3.0.1"
anyhow = "1.0.86"
goblin = "0.8.2"
konst = "0.3.9"
sha2 = "0.10.8"
hex = "0.4.3"
loopdev = "0.4.0"
log = "0.4.22"
env_logger = "0.11.5"

[profile.release]
optimize = "z"
strip = true
